tests/typechecker/none_coalescing_assign_to_immutable.err
Error: Assignment between incompatible types (‘String?’ and ‘String’)
---- example.jakt:3:5
 1 |     let i: String? = None 
 2 |     i ??= "mayb" 
         ^- Assignment between incompatible types (‘String?’ and ‘String’)
 3 |     println(i ?? "hello") 
----