tests/typechecker/none_coalescing_assign_to_immutable.jakt
/// Expect: Skip: Typechecks, but it shouldn't!
/// - error: "Assignment between incompatible types (‘String?’ and ‘String’)"

function main() {
    let i: String? = None
    i ??= "mayb"
    println(i ?? "hello")
}
